traces/bug_38.txt
examples++-load/Element_HCT.cpp:30: error: DEAD_STORE
  The value written to &gauss2 (type double) is never used.
Showing all 1 steps of the trace


examples++-load/Element_HCT.cpp:30:13: Write of unused value
28.           {
29.               const double gauss1=(1.-sqrt(1./3.))/2;
30.               const double gauss2=1.-gauss1;
                  ^
31.               
32.               const R2 Pt[] = { R2(0,0),R2(1,0),R2(0,1),R2(0.5,0.5), R2(0,0.5),R2(0.5,0)};
